--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <style>
-h1,h2 {text-align: center;}
+h1,h2 {
+	text-align: center;
+	position: relative;
+	top: 50%;
+}
 </style>
 <h1>Welcome to MasterCloud</h1>
 <h2>- Container adoptions on the cloud -</h2>
